<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/login_center_image"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="@string/login_register"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginLeft="57dp"
        android:id="@+id/registerTextView"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:background="@drawable/under_border" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="@string/login_signin"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/signinTextView"
        android:layout_marginLeft="22dp"
        android:layout_alignTop="@+id/registerTextView"
        android:layout_toEndOf="@+id/registerTextView"
        android:background="@drawable/under_border_unfocus"  />

    <EditText
        android:layout_width="244dp"
        android:layout_height="24dp"
        android:text="@string/login_name"
        android:id="@+id/nameTextView"
        android:background="@drawable/corner_view_opa_30"
        android:textColor="#aaaaaa"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:layout_below="@+id/registerTextView"
        android:layout_alignStart="@+id/registerTextView"
        android:layout_marginTop="33dp" />

    <EditText
        android:layout_height="24dp"
        android:layout_width="244dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_email"
        android:id="@+id/emailTextView"
        android:background="@drawable/corner_view_opa_30"
        android:textColor="#aaaaaa"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:layout_below="@+id/nameTextView"
        android:layout_alignStart="@+id/nameTextView" />

    <EditText
        android:layout_height="24dp"
        android:layout_width="244dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_pw"
        android:id="@+id/pwTextView"
        android:background="@drawable/corner_view_opa_30"
        android:textColor="#aaaaaa"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:layout_below="@+id/emailTextView"
        android:layout_alignStart="@+id/emailTextView" />

    <TextView
        android:layout_width="244dp"
        android:layout_height="40dp"
        android:layout_marginTop="14dp"
        android:text="Register"
        android:id="@+id/registerBTextView"
        android:gravity="center"
        android:textSize="20sp"
        android:background="@drawable/corner_view_opa_30"
        android:textColor="#aaaaaa"
        android:layout_below="@+id/pwTextView"
        android:layout_alignStart="@+id/pwTextView" />

</RelativeLayout>
